2008-06-16  Juanma Barranquero  <lekktu@gmail.com>

	* font.c (Ffont_spec): Fix usage in docstring.

2008-06-16  Andreas Schwab  <schwab@suse.de>

	* font.c (Ffont_face_attributes): Fix definition.

2008-06-16  Jason Rumney  <jasonr@gnu.org>

        * font.h (font_style_symbolic_from_value): Remove.

        * font.c (font_style_symbolic_from_value): Remove.
        (font_style_symbolic): Revert to pre 2008-06-13 version.

        * w32font.c (w32_to_fc_weight): New function.
        (w32font_full_name, logfont_to_fcname): Use it.

2008-06-16  Kenichi Handa  <handa@m17n.org>

	* font.c (font_check_object): Delete it.
	(font_clear_cache): Check if a font-object is alive.
	(font_open_entity): Likewise.  Set FONT_OBJLST_INDEX of a
	font-object to nil.
	(font_close_object): Don't check FONT_CLOSE_OBJECT.
	(font_at): Don't call font_check_object.
	(Ffont_get): Return a symbol for :weight, :slant, and :width.

2008-06-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* puresize.h (BASE_PURESIZE): Increase to 1230000.

2008-06-16  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Correctly parse KEY=VAL values.

2008-06-15  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Only one decimal point.
	(font_unparse_fcname): Handle data in family and foundry indices
	as symbols, not strings.
	(font_unparse_gtkname, Ffont_face_attributes): New functions.

	* xfns.c (Fx_select_font): Give GTK font dialog the default font name.

	* font.h (font_unparse_gtkname): Add prototype.

2008-06-15  Naohiro Aota  <nao.aota@gmail.com>  (tiny change)

	* fontset.c (fontset_pattern_regexp): Escape `+' characters in pattern.

2008-06-15  Andreas Schwab  <schwab@suse.de>

	* font.c (font_update_drivers): Fix crash when no drivers match.

2008-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* xfns.c (Fx_create_frame): internal-border-width default to 0 for Gtk.
	* gtkutil.c (xg_create_frame_widgets): Don't set internal_border_width.
